<resources>
    <string name="app_name">ADM</string>

    <string name="about_us">
        This app was created as a project for Mobile App Development course (COMP4051) in
        University of Central Asia (Naryn, Kyrgyzstan).\n\nAuthors:\n
        ► Alexandra Yu\n
        ► Naita Abdrahmanova\n
        ► Zhainagul Zhumanazar\n\n\n
        Source code (Github repository): https://github.com/juu14yon/MAD_Project\n\n\n

        © 2022-2023
    </string>

    <string name="faq">
<b>1.	Is there a fee to use this new ADM (Акча. Деньги. Money) app?\n</b>
\tNo. This new app is available for free.\n\n
<b>2.	What categories does the application have?\n</b>
\tThe ADM app has different categories, such as income, transportation, food, utilities, necessary payments, entertainment, health and medical, lifestyle and savings.\n\n
<b>3.	Can I edit or add new categories?\n</b>
\tUnfortunately, you cannot. But you can add descriptions to each record.\n\n
<b>4.	Can I change my budget for a past month?\n</b>
\tYes, you can edit your budget records for the whole period.\n\n
<b>5.	How far back can I view my spending?\n</b>
\tYou can view up all budget records. You can also select year, month and day to display records from specific period of time.\n\n
<b>6.	How Can I Track My Savings Goals?\n</b>
\tBased on age and lifestyle, people save for all kinds of reasons. You might be putting money aside for retirement, annual property taxes, a trip abroad, a major home renovation, your children\'s college funds, or a big-ticket article of clothing or piece of jewelry. Whatever your need or desire, track your progress toward all of your goals. ADM (Акча. Деньги. Money) is probably the best-known money management software.\n\n
<b>7.	What Are the Absolute Priorities?\n</b>
\tIf you feel overwhelmed by the number of things you need to save for—a wedding, a new refrigerator, a house—then take a deep breath and focus on a few critical items. Utilities and housing should be at the top, followed by food. Other key items include medication and transportation. A nice dinner out or new shoes are discretionary. Some items, like hospital bills, are not.\n\n
<b>8.	Should I establish goals from the beginning?\n</b>
\tWhen you start budgeting, it is important to give equal consideration to long term and short term savings goals. In order to determine what types of goals should be set and when, ask yourself specific questions like:\n
\t\t•	Do I want to develop a plan for retirement?\n
\t\t•	Am I saving for my college education, or do I need to set up a fund for my children?\n
\t\t•	Is it necessary to set up a fund for large expenses such as a vehicle purchase or a mortgage?\n
\t\t•	Do I have any big-ticket, short-term financial goals, like a new appliance or a summer vacation?\n\n
\tThese budgeting questions will help you develop a set of financial goals, and create a timeframe for achieving them. For example, saving for retirement is considered a long-term goal, and creating a travel fund could be considered a short-term goal.\n

    </string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="go_back">Go back</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="available">Available</string>
    <string name="income">Income</string>
    <string name="welcomeText">One of the best budgeting tips you can follow is the 50-20-30 rule, which suggests that you spend:\n  -- 50% of your after-tax income on needs,\n  -- 30% on wants,\n  -- 20% to savings.\n\nThis is a great way to allocate your money into budget categories, especially if you’re creating a budget for the first time.</string>
    <string name="expences">Expences</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="select_category">Select category: </string>
    <string name="select_date">Select date</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="language">Language</string>
    <string name="dark_theme">Dark theme</string>
    <string name="aboutus">About us</string>
    <string name="export_data">Export data</string>
    <string name="questions">FAQ</string>
    <string name="notifications">Notifications</string>
    <string name="food">Food</string>
    <string name="transportation">Transportation</string>
    <string name="utilities">Utilities</string>
    <string name="necessary_payments">Necessary payments</string>
    <string name="entertainment">Entertainment</string>
    <string name="health_and_medical">Health and Medical</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="history">History</string>
    <string name="edit_record">Edit record</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="all">All</string>
    <string name="delete_confirm">Record deleted successfully</string>
    <string name="delete_fail">Could not delete this record</string>
    <string name="monthly_report">Monthly report</string>
    <string name="new_record">New record</string>
    <string name="complete_fields">Please enter all data</string>
    <string name="save_success">Saved successfully</string>
    <string name="export_successful">Data was successfully exported to Downloads</string>
    <string name="total">Total:\n</string>
    <string name="update_record">Update record</string>
    <string name="choose_language">Choose language: </string>
</resources>