<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/availableLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/available"
                    android:textColor="?attr/text1_color"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/availableValue"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:text="1000000$"
                    android:textColor="?attr/text2_color"
                    android:textSize="24dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/availableLabel" />

                <Space
                    android:id="@+id/space"
                    android:layout_width="0dp"
                    android:layout_height="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/availableValue" />

                <TextView
                    android:id="@+id/incomeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/income"
                    android:textColor="?attr/text1_color"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toStartOf="@+id/divider2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/space" />

                <TextView
                    android:id="@+id/expencesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/expences"
                    android:textColor="?attr/text1_color"
                    android:textSize="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/divider2"
                    app:layout_constraintTop_toBottomOf="@+id/space" />

                <TextView
                    android:id="@+id/incomeValue"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:text="+1000$"
                    android:textColor="@color/textSuccess"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/divider2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/incomeLabel" />

                <TextView
                    android:id="@+id/expencesValue"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:text="-30000$"
                    android:textColor="@color/textWarning"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/divider2"
                    app:layout_constraintTop_toBottomOf="@+id/expencesLabel" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="409dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="@+id/space"
                    app:layout_constraintStart_toStartOf="@+id/space"
                    app:layout_constraintTop_toBottomOf="@+id/availableValue" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toBottomOf="@+id/divider3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/divider" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/expencesValue" />

                <TextView
                    android:id="@+id/tipTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/welcomeText"
                    android:textColor="?attr/text1_color"
                    android:textSize="16dp"
                    android:lineSpacingMultiplier="1.2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>